# sounds_good

./: Cargo.toml  build.rs
proto/: audiostream.proto
src/: file_to_ouput.rs  implementation.rs  input_to_file.rs  input_to_output.rs  lib.rs  main.rs  params.rs
